[gd_scene load_steps=5 format=3 uid="uid://dm4lbgx43dnag"]

[ext_resource type="Script" uid="uid://bleomj5dy008u" path="res://scripts/team_capture.gd" id="1_team_capture"]
[ext_resource type="PackedScene" path="res://scenes/capture_point.tscn" id="2_capture_point"]
[ext_resource type="PackedScene" path="res://scenes/agent_visual.tscn" id="3_0ydxa"]
[ext_resource type="Script" path="res://scripts/simple_agent.gd" id="4_simple_agent"]

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(60, 0.5, 60)

[node name="TeamCaptureScene" type="Node3D"]
script = ExtResource("1_team_capture")

[node name="SimulationManager" type="SimulationManager" parent="."]

[node name="EventBus" type="EventBus" parent="."]

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.8584404, 0, 0)
mesh = SubResource("BoxMesh_ground")
skeleton = NodePath("../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)
shadow_enabled = true

[node name="CapturePoints" type="Node3D" parent="."]

[node name="PointA" parent="CapturePoints" instance=ExtResource("2_capture_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.5, -15)
point_name = "Point A"

[node name="PointB" parent="CapturePoints" instance=ExtResource("2_capture_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0.5, -15)
point_name = "Point B"

[node name="PointC" parent="CapturePoints" instance=ExtResource("2_capture_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.279401, 0.3538655, -0.2763337)
point_name = "Center"

[node name="PointD" parent="CapturePoints" instance=ExtResource("2_capture_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.5, 15)
point_name = "Point D"

[node name="PointE" parent="CapturePoints" instance=ExtResource("2_capture_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0.5, 15)
point_name = "Point E"

[node name="TeamBlue" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0007363558, 0.026730657, 0)

[node name="BlueAgent1" type="Node3D" parent="TeamBlue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, -10)
script = ExtResource("4_simple_agent")
agent_id = "blue_agent_1"

[node name="BlueAgent2" type="Node3D" parent="TeamBlue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 10)
script = ExtResource("4_simple_agent")
agent_id = "blue_agent_2"

[node name="TeamRed" type="Node3D" parent="."]

[node name="RedAgent1" type="Node3D" parent="TeamRed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -10)
script = ExtResource("4_simple_agent")
agent_id = "red_agent_1"

[node name="RedAgent2" type="Node3D" parent="TeamRed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 10)
script = ExtResource("4_simple_agent")
agent_id = "red_agent_2"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 30, 30)
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="MetricsLabel" type="Label" parent="UI"]
offset_right = 500.0
offset_bottom = 250.0
text = "Team Capture Benchmark
Objectives Captured: 0/5
Team Blue Score: 0
Team Red Score: 0
Time Elapsed: 0s"
